Reverted to commit c4592a3407a7564fac6ca0e2cfc293410ee296aa, undoing UI tests