@@ -19,28 +19,6 @@ kotlin {
     jvmToolchain(17)
 }
 
-sourceSets {
-    create("uiTest") {
-        compileClasspath += sourceSets.main.get().output
-        runtimeClasspath += sourceSets.main.get().output
-    }
-}
-
-idea {
-    module {
-        testSources.from(sourceSets["uiTest"].kotlin.srcDirs)
-        testResources.from(sourceSets["uiTest"].resources.srcDirs)
-    }
-}
-
-val uiTestImplementation: Configuration by configurations.getting {
-    extendsFrom(configurations.testImplementation.get())
-}
-
-val uiTestRuntimeOnly: Configuration by configurations.getting {
-    extendsFrom(configurations.testRuntimeOnly.get())
-}
-
 // Configure project's dependencies
 repositories {
     mavenCentral()
@@ -54,9 +32,6 @@ repositories {
 // Dependencies are managed with Gradle version catalog - read more: https://docs.gradle.org/current/userguide/platforms.html#sub:version-catalog
 dependencies {
     testImplementation(libs.junit)
-    uiTestImplementation(libs.intellijUiTestRobot)
-    uiTestImplementation(libs.intellijUiTestFixtures)
-    uiTestImplementation(kotlin("stdlib"))  // Only add kotlin-stdlib for UI tests
 
     // IntelliJ Platform Gradle Plugin Dependencies Extension - read more: https://plugins.jetbrains.com/docs/intellij/tools-intellij-platform-gradle-plugin-dependencies-extension.html
     intellijPlatform {
@@ -123,8 +98,7 @@ intellijPlatform {
         // The pluginVersion is based on the SemVer (https://semver.org) and supports pre-release labels, like 2.1.7-alpha.3
         // Specify pre-release label to publish the plugin in a custom Release Channel automatically. Read more:
         // https://plugins.jetbrains.com/docs/intellij/deployment.html#specifying-a-release-channel
-        channels = providers.gradleProperty("pluginVersion")
-            .map { listOf(it.substringAfter('-', "").substringBefore('.').ifEmpty { "default" }) }
+        channels = providers.gradleProperty("pluginVersion").map { listOf(it.substringAfter('-', "").substringBefore('.').ifEmpty { "default" }) }
     }
 
     pluginVerification {
@@ -159,13 +133,6 @@ tasks {
     publishPlugin {
         dependsOn(patchChangelog)
     }
-    register<Test>("uiTest") {
-        description = "Runs the UI tests."
-        group = "verification"
-        testClassesDirs = sourceSets["uiTest"].output.classesDirs
-        classpath = sourceSets["uiTest"].runtimeClasspath
-        jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
-    }
 }
 
 intellijPlatformTesting {
@@ -176,7 +143,6 @@ intellijPlatformTesting {
                     listOf(
                         "-Drobot-server.port=8082",
                         "-Dide.mac.message.dialogs.as.sheets=false",
-                        "-Dide.show.tips.on.startup.default.value=false",
                         "-Djb.privacy.policy.text=<!--999.999-->",
                         "-Djb.consents.confirmation.enabled=false",
                     )
